# WorkoutBackend

./: .coveragerc  Dockerfile  docker-compose.yaml  pyproject.toml
app/core/: application.py  logger.py
