[tool.poetry]
name = "workoutbackend"
version = "0.1.0"
description = ""
authors = ["Steven Kravitsky <steven.kravitsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.12.1"
tox = "^3.23.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
